--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/task-manager?serverTimezone=UTC&sslmode=disable
 
+spring.jpa.show-sql: true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
